--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     padding: 15px;
     margin: 20px;
     max-width: 800px;
+    margin-bottom: 0;
 }
 h1 {
     /* font-family: 'Merriweather', serif; */
@@ -76,4 +77,11 @@ font-weight: bold;
     color: gray;
     font-size: 14px;
     display: block;
+}
+.link-source {
+    font-family: 'Merriweather', serif;
+    font-size: 11px;
+    margin-top: 0;
+    position: relative;
+    left: 25px;
 }
