--- a/src/style.css
+++ b/src/style.css
@@ -44,13 +44,13 @@ li {
     position: relative;
     top: -12px;
 }
-.degrees-min {
-    font-size: 16px;
+.weather-forecast-temperature-min {
+    font-size: 14px;
     font-weight: bold;
     opacity: 0.6;
 }
-.degrees-max {
-    font-size: 16px;
+.weather-forecast-temperature-max {
+    font-size: 14px;
 }
 .city {
     text-decoration: underline;
@@ -75,7 +75,7 @@ li {
 }
 .weather-forecast{
     text-align: center;
-    background-color: rgba(237, 198, 238, 0.332);
+    border: 0.2px solid rgba(173, 168, 168, 0.711);
     border-radius: 5px;
     box-shadow: 7px 5px 5px rgba(167, 166, 166, 0.35);
     padding-top: 10px;
